// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/component/module/service should render correctly 1`] = `
<nav
  className="m-service foo"
  itemScope={true}
  itemType="https://schema.org/ItemList"
  role="list"
>
  <li
    className="m-service__item--left"
    itemProp="itemListElement"
  >
    <div
      className="m-service__content"
    >
      <div
        className="m-service__icon"
      >
        <i
          aria-hidden="true"
          className="c-font-icon--happy m-service__icon-font"
        />
      </div>
      <div
        className="m-service__description"
      >
        <h3
          className="is-centered c-type--h3 m-service__headline"
        >
          headline happy
        </h3>
        <p
          className="c-type--p m-service__text"
          dangerouslySetInnerHTML={
            Object {
              "__html": "text happy",
            }
          }
        />
      </div>
    </div>
  </li>
  <li
    className="m-service__item--right"
    itemProp="itemListElement"
  >
    <div
      className="m-service__content"
    >
      <div
        className="m-service__icon"
      >
        <i
          aria-hidden="true"
          className="c-font-icon--xing m-service__icon-font"
        />
      </div>
      <div
        className="m-service__description"
      >
        <h3
          className="is-centered c-type--h3 m-service__headline"
        >
          headline xing
        </h3>
        <p
          className="c-type--p m-service__text"
          dangerouslySetInnerHTML={
            Object {
              "__html": "text xing",
            }
          }
        />
      </div>
    </div>
  </li>
  <li
    aria-hidden="true"
    className="m-service__item--clear"
  />
  <li
    className="m-service__item--left"
    itemProp="itemListElement"
  >
    <div
      className="m-service__content"
    >
      <div
        className="m-service__icon"
      >
        <i
          aria-hidden="true"
          className="c-font-icon--facebook m-service__icon-font"
        />
      </div>
      <div
        className="m-service__description"
      >
        <h3
          className="is-centered c-type--h3 m-service__headline"
        >
          headline facebook
        </h3>
        <p
          className="c-type--p m-service__text"
          dangerouslySetInnerHTML={
            Object {
              "__html": "text facebook",
            }
          }
        />
      </div>
    </div>
  </li>
  Module service children
</nav>
`;

exports[`common/component/module/service should render no itemType if unset 1`] = `
<nav
  className="m-service foo"
  role="list"
>
  <li
    className="m-service__item--left"
    itemProp="itemListElement"
  >
    <div
      className="m-service__content"
    >
      <div
        className="m-service__icon"
      >
        <i
          aria-hidden="true"
          className="c-font-icon--happy m-service__icon-font"
        />
      </div>
      <div
        className="m-service__description"
      >
        <h3
          className="is-centered c-type--h3 m-service__headline"
        >
          headline happy
        </h3>
        <p
          className="c-type--p m-service__text"
          dangerouslySetInnerHTML={
            Object {
              "__html": "text happy",
            }
          }
        />
      </div>
    </div>
  </li>
  <li
    className="m-service__item--right"
    itemProp="itemListElement"
  >
    <div
      className="m-service__content"
    >
      <div
        className="m-service__icon"
      >
        <i
          aria-hidden="true"
          className="c-font-icon--xing m-service__icon-font"
        />
      </div>
      <div
        className="m-service__description"
      >
        <h3
          className="is-centered c-type--h3 m-service__headline"
        >
          headline xing
        </h3>
        <p
          className="c-type--p m-service__text"
          dangerouslySetInnerHTML={
            Object {
              "__html": "text xing",
            }
          }
        />
      </div>
    </div>
  </li>
  <li
    aria-hidden="true"
    className="m-service__item--clear"
  />
  <li
    className="m-service__item--left"
    itemProp="itemListElement"
  >
    <div
      className="m-service__content"
    >
      <div
        className="m-service__icon"
      >
        <i
          aria-hidden="true"
          className="c-font-icon--facebook m-service__icon-font"
        />
      </div>
      <div
        className="m-service__description"
      >
        <h3
          className="is-centered c-type--h3 m-service__headline"
        >
          headline facebook
        </h3>
        <p
          className="c-type--p m-service__text"
          dangerouslySetInnerHTML={
            Object {
              "__html": "text facebook",
            }
          }
        />
      </div>
    </div>
  </li>
  Module service children
</nav>
`;

exports[`common/component/module/service should return null if no content is given 1`] = `null`;
